--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Soarblue Consultores - Soluciones Ambientales con Tecnología</title>
+  <title>Soarblue Consultores - Soluciones Ambientales </title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <style>
     :root {
@@ -1109,7 +1109,7 @@
     <div class="access-container animate-fadeIn">
       <img src="logo/logo-soarblue-W.svg" alt="Soarblue Consultores" class="access-logo">
       <h2 class="access-title">Acceso Privado</h2>
-      <p class="access-subtitle">Ingrese la contraseña para acceder al sitio web</p>
+      <p class="access-subtitle">Ingrese la contraseña para acceder</p>
       
       <div class="input-group">
         <label for="clave" class="input-label">Contraseña</label>
