--- a/index.html
+++ b/index.html
@@ -1108,7 +1108,7 @@
   <div id="access-overlay" class="access-overlay">
     <div class="access-container animate-fadeIn">
       <img src="logo/logo-soarblue-W.svg" alt="Soarblue Consultores" class="access-logo">
-      <h2 class="access-title">Acceso Privado</h2>
+      <h2 class="access-title">En Actualización</h2>
       <p class="access-subtitle">Ingrese la contraseña para acceder</p>
       
       <div class="input-group">
