--- a/index.html
+++ b/index.html
@@ -1344,11 +1344,11 @@
             </div>
             <div class="team-member-content">
               <h3 class="team-member-name">Macarena Vassallo C.</h3>
-              <span class="team-member-role">Compliance</span>
+              <span class="team-member-role">Leyes</span>
               
               <div class="team-member-info">
                 <div class="team-info-title">Formación</div>
-                <div class="team-info-desc">ABOGADA, Universidad</div>
+                <div class="team-info-desc">Abogada, Universidad</div>
               </div>
               
               <div class="team-member-info">
